--- a/menu.html
+++ b/menu.html
@@ -52,13 +52,13 @@
                 <i class="fa-solid fa-baby-carriage"></i>
                 <span>cadastro</span>
             </a>
-            <a class="nav-item a" href="">
+            <a class="nav-item a" href="vendas.html">
                 <i class="fa-solid fa-utensils"></i>
                 <span>loja</span>
             </a>
             <a class="nav-item a" href="">
                 <i class="fa-solid fa-cart-shopping"></i>
-                <span>Drinks</span>
+                <span>Angular</span>
             </a>
         </div>
 
