--- a/menuCabecario.html
+++ b/menuCabecario.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="menuCabecario.css">
 </head>
 <body>
-  rg
+
+<nav class="navM">
+    <div class="logoM">
+        <a href="index.html" class="aM"><h1 class="h1M">impactos</h1></a>
+    </div>
+    <button class="buttonM">&#9776;</button>
+    <ul class="ulM">
+        <li class="liM">
+            <a class="nav-link" routerLink="login"><p class="pM">Login</p></a>
+        </li>
+        <li class="liM">
+            <a class="nav-link" href="vendas.html"><p class="pM">Loja</p></a>
+        </li>
+        <li class="liM">
+            <a class="nav-link" routerLink="selectBurg"><p class="pM">Perfil</p></a>
+        </li>
+        <li class="liM">
+            <a href="https://isaiasiv.github.io/projetodesala.github.io/" ><p class="pM">Projeto em Angular</p></a>
+        </li>
+        <li class="liM">
+            <a href="https://isaiasiv.github.io/index.html" ><p class="pM">Atividades</p></a>
+        </li>
+    </ul>
+</nav>
 
 </body>
 </html>
