--- a/vendas.html
+++ b/vendas.html
@@ -8,14 +8,16 @@
     <link rel="stylesheet" href="vendas.css">
     <link rel="stylesheet" href="footer.css">
     <script src="slideContener.js"></script>
+    <script src="menuCabecario.js"></script>
     <title>Document</title>
 </head>
 <body>
+<div id="menuCabecario" class="menuResponsivel"></div>
 
 <div class="background">
     <header class="menuP">
         <div class="logo">
-            <h1>impactos</h1>
+            <a href="index.html"><h1>impactos</h1></a>
         </div><!--logo-->
 
         <div class="cabeçalho-link">
@@ -23,20 +25,20 @@
                 <a href="#">Inicio</a>
             </li>
             <li>
-                <a href="#">Destaque</a>
-            </li>
-            <li>
                 <a href="#contatos">Contato</a>
             </li>
             <li>
                 <a href="https://isaiasiv.github.io/">Atividades</a>
             </li>
+            <li>
+                <a href="perfil.html">perfil</a>
+            </li>
         </div><!--cabeçalho-link-->
         <div class="icon"><span><ion-icon name="bag-outline"></ion-icon></span></div><!--icon-->
     </header>
 
-    <div class="Meio">
-        <h1>LOCAÇÃO DE EQUIPAMENTOS</h1>
+    <div class="Meio corWhite ">
+        <h1 >LOCAÇÃO DE EQUIPAMENTOS</h1>
         <h1>PARA EVENTOS</h1>
         <P>som e iluminação</P>
         <button>pacotes de equipamentos</button>
@@ -62,24 +64,24 @@
     <div class="Container-card-1">
         <div class="cards">
             <h3>Evento com 100 pessoas</h3>
-            <img src="img/Untitled - 2.png">
+            <img src="https://static.mundomax.com.br/produtos/81768/150/1.webp">
         </div><!--cards-->
 
         <div class="cards">
-            <h3>evento com 200 pessoas</h3>
+            <h3>Evento com 200 pessoas</h3>
             <img src="https://static.mundomax.com.br/produtos/82455/150/1.webp">
         </div><!--cards-->
     </div><!--Container-card-1-->
 
     <div class="Container-card-1">
         <div class="cards">
-            <h3>evento com 500 pessoas</h3>
+            <h3>Evento com 500 pessoas</h3>
             <img src="https://shopblob.blob.core.windows.net/1204-produtoimagem/zoom-sonorizacao+equipamentos.jpg">
         </div><!--cards-->
 
         <div class="cards">
-            <h3>evento com 800 pessoas</h3>
-            <img src="img/Untitled - 1.png">
+            <h3>Evento com 800 pessoas</h3>
+            <img src="https://static.mundomax.com.br/produtos/81768/150/1.webp">
         </div><!--cards-->
     </div><!--Container-card-1-->
 </section>
@@ -87,50 +89,51 @@
 <section class="cta">
     <div class="text-cta corOuro">
         <h6 class="corOuro">GARANTA SUA FESTA DE FINAL DE ANO</h6>
-        <h4>20% OFF<br>NOVAS CHEGADAS</h4>
-        <a href="#" class="btn">Compre agora</a>
+        <h4>20% OFF<br>NA CONTRATAÇÃO DE 2 PERIODOS</h4>
+        <a href="#" class="btn">alugue agora</a>
     </div><!--text-cta-->
 </section><!--cta-->
 
 <section>
-    <h1>ESTOQUE NOVOS</h1>
+    <h1>KIT EVENTO</h1>
+
     <div class="Container-roupas">
         <div class="equipamentos">
-            <img src="img/roupa1.jpg" alt="">
-            <p>Lorem Ipsum dizgi</p>
-            <h5>$188</h5>
+            <img src="https://static.mundomax.com.br/produtos/81768/150/1.webp" alt="Promoção">
+            <p>Som para eventos apartir de:</p>
+            <h5>R$ 250,00</h5>
             <ion-icon name="cart-outline"></ion-icon>
         </div><!--roupa-->
 
 
         <div class="equipamentos">
-            <img src="https://static.mundomax.com.br/produtos/81768/150/1.webp" alt="">
-            <p>Lorem Ipsum dizgi</p>
-            <h5>$188</h5>
-            <span><ion-icon name="cart-outline"></ion-icon></span>
-        </div><!--roupa-->
-
-        <div class="equipamentos">
-            <img src="https://static.mundomax.com.br/produtos/81768/150/1.webp" alt="">
-            <p>Lorem Ipsum dizgi</p>
-            <h5>$188</h5>
-            <ion-icon name="cart-outline"></ion-icon>
-        </div><!--roupa-->
-
-        <div class="equipamentos">
-            <img src="https://static.mundomax.com.br/produtos/81768/150/1.webp alt="">
+            <img src="https://static.mundomax.com.br/produtos/82455/150/1.webp" alt="evento">
             <p>kit evento pequeno</p>
-            <h5>R$250</h5><ion-icon name="cart-outline"></ion-icon>
-        </div><!--roupa-->
-    </div><!--container-roupas-->
+            <h5>R$250,00</h5>
+            <span><ion-icon name="cart-outline"></ion-icon></span>
+        </div>
+
+        <div class="equipamentos">
+            <img src="https://static.mundomax.com.br/produtos/81768/150/1.webp" alt="kit palestra">
+            <p>kit palestra</p>
+            <h5>R$300,00</h5>
+            <ion-icon name="cart-outline"></ion-icon>
+        </div>
+
+        <div class="equipamentos">
+            <img src="https://shopblob.blob.core.windows.net/1204-produtoimagem/zoom-sonorizacao+equipamentos.jpg" alt="kit casamento">
+            <p>kit casamento</p>
+            <h5>R$400</h5><ion-icon name="cart-outline"></ion-icon>
+        </div><!--item-->
+    </div><!--container--->
 </section>
 
 <div class="Marcas">
-    <img src="https://shopblob.blob.core.windows.net/1204-produtoimagem/zoom-sonorizacao+equipamentos.jpg" alt="Marca">
-    <img src="https://shopblob.blob.core.windows.net/1204-produtoimagem/zoom-sonorizacao+equipamentos.jpg" alt="Marca">
-    <img src="https://static.mundomax.com.br/produtos/81768/150/1.webp" alt="Marca">
-    <img src="https://static.mundomax.com.br/produtos/81768/150/1.webp" alt="Marca">
-    <img src="https://static.mundomax.com.br/produtos/81768/150/1.webp" alt="Marca">
+    <img src="imagens/anucio/shure.avif" alt="Shure">
+    <img src="imagens/anucio/Logo-Yamaha.webp" alt="Yamaha">
+    <img src="https://static.mundomax.com.br/produtos/81768/150/1.webp" alt="Staley">
+    <img src="https://static.mundomax.com.br/produtos/81768/150/1.webp" alt="canon">
+    <img src="https://static.mundomax.com.br/produtos/81768/150/1.webp" alt="apple">
     <img src="https://static.mundomax.com.br/produtos/81768/150/1.webp" alt="Marca">
 </div><!--Marcas-->
 
@@ -161,7 +164,7 @@
                 <h3>Blog</h3>
             </li>
             <li>
-                <a class="footer-link" href="index.html" >Sobre nós</a>
+                <a class="footer-link" href="index.html" >Quem somos?</a>
             </li>
             <li>
                 <a class="footer-link" routerLink="cardapio">cardapio</a>
@@ -179,7 +182,7 @@
                 <a class="footer-link" routerLink="hamburguer">equipamentos</a>
             </li>
             <li>
-                <a  class="footer-link" routerLink="bebidas">musicos</a>
+                <a  class="footer-link" href="player.html">musicos</a>
             </li>
             <li>
                 <a class="footer-link" routerLink="batata">filmagens</a>
@@ -203,7 +206,7 @@
     </div>
 
     <div id="footer_copyright">
-        Copyright © 2022 All rights reserved | This template is made with  by Isaias Valdemir projeto de sala - programação para web 1 - 4º periodo
+        Copyright © 2023 All rights reserved | This template is made with  by Isaias Valdemir projeto de sala - programação para web 1 - 4º periodo
         - sistemas de informação - IF Goiano - campus Urutaí
     </div>
 </footer>
