--- a/player.html
+++ b/player.html
@@ -10,10 +10,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="player.css">
+    <script src="menuCabecario.js"></script>
 
     <title>Music</title>
 </head>
 <body>
+<header>
+    <div id="menuCabecario"></div>
+</header>
 <div class="body">
 <img src="imagens/play_da_musica/anos90.jpg " class="img">
 <div class="descricao">
