--- a/menu.html
+++ b/menu.html
@@ -38,11 +38,11 @@
             </a>
             <a class="nav-item a" href="">
                 <i class="fa-solid fa-bell-concierge"></i>
-                <span>atividade</span>
+                <span>Cadastro</span>
             </a>
-            <a class="nav-item a" href="">
-                <i class="fa-solid fa-water"></i>
-                <span>carrinho</span>
+            <a class="nav-item a" href="player.html">
+                <i class="fa-solid fa-music"></i>
+                <span>Musica</span>
             </a>
             <a class="nav-item a" href="">
                 <i class="fa-solid fa-calendar"></i>
@@ -53,7 +53,7 @@
                 <span>cadastro</span>
             </a>
             <a class="nav-item a" href="vendas.html">
-                <i class="fa-solid fa-utensils"></i>
+                <i class="fa-solid fa-cart-shopping"></i>
                 <span>loja</span>
             </a>
             <a class="nav-item a" href="">
