--- a/menuCabecario.html
+++ b/menuCabecario.html
@@ -14,19 +14,19 @@
     <button class="buttonM">&#9776;</button>
     <ul class="ulM">
         <li class="liM">
-            <a class="nav-link" routerLink="login"><p class="pM">Login</p></a>
+            <a class="nav-link aM" routerLink="login"><p class="pM">Login</p></a>
         </li>
         <li class="liM">
-            <a class="nav-link" href="vendas.html"><p class="pM">Loja</p></a>
+            <a class="nav-link aM" href="vendas.html"><p class="pM">Loja</p></a>
         </li>
         <li class="liM">
-            <a class="nav-link" routerLink="selectBurg"><p class="pM">Perfil</p></a>
+            <a class="nav-link aM" routerLink="selectBurg"><p class="pM">Perfil</p></a>
         </li>
         <li class="liM">
-            <a href="https://isaiasiv.github.io/projetodesala.github.io/" ><p class="pM">Projeto em Angular</p></a>
+            <a class="aM" href="https://isaiasiv.github.io/projetodesala.github.io/" ><p class="pM">Projeto em Angular</p></a>
         </li>
         <li class="liM">
-            <a href="https://isaiasiv.github.io/index.html" ><p class="pM">Atividades</p></a>
+            <a class="aM" href="https://isaiasiv.github.io/index.html" ><p class="pM">Atividades</p></a>
         </li>
     </ul>
 </nav>
