--- a/menu.html
+++ b/menu.html
@@ -33,20 +33,16 @@
         <div class="nav-items">
 
             <a class="nav-item a" href="">
-                <i class="fa-solid fa-spa"></i>
+                <i class="fa-solid fa-user"></i>
                 <span>Login</span>
             </a>
             <a class="nav-item a" href="">
-                <i class="fa-solid fa-bell-concierge"></i>
+                <i class="fa-solid fa-pen-nib"></i>
                 <span>Cadastro</span>
             </a>
             <a class="nav-item a" href="player.html">
                 <i class="fa-solid fa-music"></i>
                 <span>Musica</span>
-            </a>
-            <a class="nav-item a" href="">
-                <i class="fa-solid fa-calendar"></i>
-                <span>login</span>
             </a>
             <a class="nav-item a" href="">
                 <i class="fa-solid fa-baby-carriage"></i>
@@ -56,16 +52,20 @@
                 <i class="fa-solid fa-cart-shopping"></i>
                 <span>loja</span>
             </a>
-            <a class="nav-item a" href="">
-                <i class="fa-solid fa-cart-shopping"></i>
+            <a class="nav-item a" href="https://isaiasiv.github.io/">
+                <i class="fa-solid fa-book"></i>
+                <span>atividade</span>
+            </a>
+            <a class="nav-item a" href="https://projeto-em-angular.netlify.app/">
+                <i class="fa-brands fa-angular"></i>
                 <span>Angular</span>
             </a>
         </div>
 
         <div class="nav-locale">
-            <a href="" class="a">
-                <i class="fa-solid fa-location-dot"></i>
-                <span>Atividades</span>
+            <a href="vendas.html" class="a">
+                <i class="fa-regular fa-speakers"></i>
+                <span>impactos audio</span>
             </a>
         </div>
 
@@ -116,12 +116,12 @@
             <br>
             - Pacotes Personalizados:** Oferecemos pacotes personalizados para atender às suas necessidades específicas, garantindo que você receba exatamente o que deseja.
             <br>
-            <b>Entre em Contato Conosco:</b>
+            <b><h3>Entre em Contato Conosco:</h3></b>
             <br>
             <br>
         Estamos ansiosos para trabalhar em parceria e tornar seu evento um sucesso inesquecível. Entre em contato conosco para discutir suas necessidades e solicitar um orçamento personalizado.
 
-        Telefone: [Inserir Número de Contato]
+        Telefone: <h3><i>62 99800 7777</i></h3>
 
         Email: [Inserir Endereço de Email]
 
