--- a/vendas.html
+++ b/vendas.html
@@ -34,13 +34,13 @@
                 <a href="perfil.html">perfil</a>
             </li>
         </div><!--cabeçalho-link-->
-        <div class="icon"><span><ion-icon name="bag-outline"></ion-icon></span></div><!--icon-->
+        <div class="icon"><a href="carrinho.html"><span><ion-icon name="bag-outline"></ion-icon></span></a> </div><!--icon-->
     </header>
 
     <div class="Meio corWhite ">
-        <h1 >LOCAÇÃO DE EQUIPAMENTOS</h1>
-        <h1>PARA EVENTOS</h1>
-        <P>som e iluminação</P>
+        <h1 class="borda_letra corBlack">LOCAÇÃO DE EQUIPAMENTOS</h1>
+        <h1 class="borda_letra corBlack">PARA EVENTOS</h1>
+        <P class="borda_letra corBlack">som e iluminação</P>
         <button>pacotes de equipamentos</button>
     </div><!--Meio-->
 </div><!--background-->
@@ -131,8 +131,12 @@
 <div class="Marcas">
     <img src="imagens/anucio/shure.avif" alt="Shure">
     <img src="imagens/anucio/Logo-Yamaha.webp" alt="Yamaha">
+    <a href="https://pag.ae/7Z_Wwjupv" >
     <img src="https://static.mundomax.com.br/produtos/81768/150/1.webp" alt="Staley">
+    </a>
+        <a>
     <img src="https://static.mundomax.com.br/produtos/81768/150/1.webp" alt="canon">
+    </a>
     <img src="https://static.mundomax.com.br/produtos/81768/150/1.webp" alt="apple">
     <img src="https://static.mundomax.com.br/produtos/81768/150/1.webp" alt="Marca">
 </div><!--Marcas-->
