--- a/menu.html
+++ b/menu.html
@@ -44,9 +44,9 @@
                 <i class="fa-solid fa-music"></i>
                 <span>Musica</span>
             </a>
-            <a class="nav-item a" href="">
-                <i class="fa-solid fa-baby-carriage"></i>
-                <span>cadastro</span>
+            <a class="nav-item a" href="lista.html">
+                <i class="fa-solid fa-list"></i>
+                <span>lista de equipamento</span>
             </a>
             <a class="nav-item a" href="vendas.html">
                 <i class="fa-solid fa-cart-shopping"></i>
