--- a/menu.html
+++ b/menu.html
@@ -36,9 +36,9 @@
                 <i class="fa-solid fa-user"></i>
                 <span>Login</span>
             </a>
-            <a class="nav-item a" href="">
-                <i class="fa-solid fa-pen-nib"></i>
-                <span>Cadastro</span>
+            <a class="nav-item a" href="carrinho.html">
+                <i class="fa-solid fa-cart-shopping"></i>
+                <span>Carrinho</span>
             </a>
             <a class="nav-item a" href="player.html">
                 <i class="fa-solid fa-music"></i>
@@ -49,7 +49,7 @@
                 <span>lista de equipamento</span>
             </a>
             <a class="nav-item a" href="vendas.html">
-                <i class="fa-solid fa-cart-shopping"></i>
+                <i class="fa-solid fa-shop"></i>
                 <span>loja</span>
             </a>
             <a class="nav-item a" href="https://isaiasiv.github.io/">
