--- a/carrinho.html
+++ b/carrinho.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Carrinho de Compras</title>
   <link rel="stylesheet" href="carrinho.css" />
+  <link rel="shortcut icon" href="imagens/imagens_globais/logo.png">
   <script src="menuCabecario.js"></script>
   <link
           href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
@@ -34,7 +35,7 @@
         <tr>
           <td>
             <div class="product">
-              <img src="https://picsum.photos/100/120" alt="" />
+              <img src="https://static.mundomax.com.br/produtos/81768/150/1.webp" alt="" />
               <div class="info">
                 <div class="name">Nome do produto</div>
                 <div class="category">Categoria</div>
@@ -57,7 +58,7 @@
         <tr>
           <td>
             <div class="product">
-              <img src="https://picsum.photos/100/120" alt="" />
+              <img src="https://shopblob.blob.core.windows.net/1204-produtoimagem/zoom-sonorizacao+equipamentos.jpg" alt="" />
               <div class="info">
                 <div class="name">Nome do produto</div>
                 <div class="category">Categoria</div>
@@ -80,7 +81,7 @@
         <tr>
           <td>
             <div class="product">
-              <img src="https://picsum.photos/100/120" alt="" />
+              <img src="https://static.mundomax.com.br/produtos/82455/150/1.webp" alt="" />
               <div class="info">
                 <div class="name">Nome do produto</div>
                 <div class="category">Categoria</div>
