--- a/menuCabecario.html
+++ b/menuCabecario.html
@@ -2,8 +2,9 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Impactos list</title>
     <link rel="stylesheet" href="menuCabecario.css">
+    <link rel="shortcut icon" href="imagens/imagens_globais/logo.png">
 </head>
 <body>
 
@@ -14,16 +15,16 @@
     <button class="buttonM">&#9776;</button>
     <ul class="ulM">
         <li class="liM">
-            <a class="nav-link aM" routerLink="login"><p class="pM">Login</p></a>
+            <a class="nav-link aM" href="lista.html"><p class="pM">Lista</p></a>
         </li>
         <li class="liM">
             <a class="nav-link aM" href="vendas.html"><p class="pM">Loja</p></a>
         </li>
         <li class="liM">
-            <a class="nav-link aM" routerLink="selectBurg"><p class="pM">Perfil</p></a>
+            <a class="nav-link aM" href="carrinho.html"><p class="pM">Perfil</p></a>
         </li>
         <li class="liM">
-            <a class="aM" href="https://isaiasiv.github.io/projetodesala.github.io/" ><p class="pM">Projeto em Angular</p></a>
+            <a class="aM" href="https://projeto-em-angular.netlify.app" ><p class="pM">Projeto em Angular</p></a>
         </li>
         <li class="liM">
             <a class="aM" href="https://isaiasiv.github.io/index.html" ><p class="pM">Atividades</p></a>
