--- a/vendas.html
+++ b/vendas.html
@@ -41,7 +41,7 @@
         <h1 class="borda_letra corBlack">LOCAÇÃO DE EQUIPAMENTOS</h1>
         <h1 class="borda_letra corBlack">PARA EVENTOS</h1>
         <P class="borda_letra corBlack">som e iluminação</P>
-        <button>pacotes de equipamentos</button>
+        <a href="#inicio"><button>pacotes de equipamentos</button></a>
     </div><!--Meio-->
 </div><!--background-->
 
@@ -54,11 +54,12 @@
             <h3>Evento com 50 pessoas</h3>
             <img src="https://static.mundomax.com.br/produtos/81768/150/1.webp">
         </div><!--cards-->
-
         <div class="cards">
             <h3>Evento com 1000 pessoas</h3>
-            <img src="https://static.mundomax.com.br/produtos/81768/150/1.webp">
-        </div><!--cards-->
+            <a href="carrinho.html">
+                <img src="https://static.mundomax.com.br/produtos/81768/150/1.webp">
+            </a>
+        </div>
     </div><!--Container-card-1-->
 
     <div class="Container-card-1">
@@ -95,6 +96,7 @@
 </section><!--cta-->
 
 <section>
+    <a name="inicio"></a>
     <h1>KIT EVENTO</h1>
 
     <div class="Container-roupas">
