--- a/menu.html
+++ b/menu.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu</title>
-
+    <link rel="shortcut icon" href="imagens/imagens_globais/logo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
           integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
           crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -32,7 +32,7 @@
 
         <div class="nav-items">
 
-            <a class="nav-item a" href="">
+            <a class="nav-item a" href="https://isaiasiv.github.io/responsivoFormularioDeCadastro.html">
                 <i class="fa-solid fa-user"></i>
                 <span>Login</span>
             </a>
