--- a/lista.html
+++ b/lista.html
@@ -9,9 +9,12 @@
   <link rel="stylesheet" href="lista.css">
   <link rel="shortcut icon" href="imagens/imagens_globais/logo.png">
   <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
+  <script src="menuCabecario.js"></script>
 </head>
 
 <body>
+  <div id="menuCabecario"></div>
+  <div class="bodyL">
 <div class="container">
   <div class="header">
     <span>Lista de equipamentos</span>
@@ -51,6 +54,7 @@
   </div>
 
 </div>
+  </div>
 <script src="lista.js"></script>
 </body>
 
